css/responsive/slim-style.css
/* ... */
@media(max-width:700px) {
    .FormHelp {
        margin:0 0 10px 0px;
    }
    .Question {
        overflow: scroll;
    }
    .FormWide .Question .FormHelp {
        margin:0 0 10px 0px;
    }
    .FormWide .Question .FormHelp .FormHelpInner {
        width: 100%;
        box-sizing: border-box;
        margin-left: 0;
    }
}
@media(max-width:525px) {
    
    .FormWide .Question label{width: 100%}
    .FormWide .Question .stdwidth, .FormWide .Question .tickset{width: 100%}
    .CategoryBox {
        width:100%;
    }

    body {
        background-image: none !important;
    }
}
/* Login Forms */
@media(max-width:1100px) { 
    #CentralSpaceLogin .Question label {
        width:300px;
    }
}
@media(max-width:750px) {
    #CentralSpaceLogin {
        width:94%;
        margin-left:3%;
        margin-right: 3%;
        margin-top: 3%;
        margin-bottom: 3%;
        padding:0;
        top:0;
        transform:translateY(0); 
    }
    #AntiSpamImage {
        margin-left: 0 !important;
    }
    
    .RecordPanel {
    padding: 5px 5px 5px 5px;
    }
    
    #ResourceWorkflowTable {
        text-align: center;
    }
    
    #ResourceWorkflowTable td {
        float :left;
        clear :left;
        margin-left :0px;
        margin-right:0px;
        padding-left: 0px;
        padding-right: 0px;
        width: 100%;
    }
    
    #ResourceWorkflowTable input[type="submit"] {
    padding: 3px 0px; 
    margin: 0px;
}
}

/* Header */
#HeaderResponsive {
    text-align: center;
}
#HeaderImg {
    max-width:320px;
    clear:both;
    display:inline-block;
}
.ResponsiveHeaderButton {
    margin-bottom:5px;
    width: 35%;
}
#HeaderButtons {
    display:none;
}
@media(max-width:1200px) {
    #Header {
        min-height: 47px;
        height: auto !important;
    }
    #HeaderButtons {
        display: block !important;
        vertical-align: top;
    }
    #HeaderNav1Click {
        float:right;
        margin-right: 5px;
    }
    #HeaderNav2Click {
        float: right;
        margin-right: 5px;
    }
    .ResponsiveNav1Username {
        display:none !important;
    }
    #Header #HeaderNav1 li {
        border:none;
    }
    #HeaderNav1 {
        display:none;
        margin:0;
        height: auto !important;
        float: none;
        clear: both;
        text-align: right;
    }
    #HeaderNav2 {
        display:none;
        margin:0;
        height: auto !important;
        float: none;
        width: 100%;
        clear: both;
        text-align: right;
    }
    #Header .HorizontalNav ul li {
        display: inline-block;
        padding:0;
        border:0;
        float: left;
    }
    #Header .HorizontalNav ul li a, 
    .SlimHeader #Header.slimheader_darken .HorizontalNav ul li a:link,
    .SlimHeader #Header.slimheader_darken .HorizontalNav ul li a:active,
    .SlimHeader #Header.slimheader_darken .HorizontalNav ul li a:hover,
    .SlimHeader #Header.slimheader_darken .HorizontalNav ul li a:visited{
        display:inline-block;
        text-align: center;
        background: #ffffff;   
        border: 1px solid white;
        height: 45px;
        line-height: 45px;
        min-width:95px;
        padding:0 5px;
        border-radius:6px;
        margin-bottom:5px;
    }
    #Header.HeaderMenu {
        height:auto;
    }
    .HeaderMenu #HeaderImg {
        max-height:40px;
    }
    #HeaderImg {
        max-height:47px;
    }
    #Header.slimheader_darken a:link, #Header.slimheader_darken a:visited, #Header.slimheader_darken a:active {
        color: #565656;
    }
    
    #BrowseBar, #BrowseBarTab{
	display: none !important;
    }
        
    #CentralSpaceContainer{
        padding-left: 0px;
        }   


    #HeaderNav1 li a,
    #HeaderNav2 li a {
        color: #3a3a3a;
        opacity: 1;
        background-color: #ffffff;
    }
    #HeaderNav2 {
        padding-left: 0;
    }

    #Header .HorizontalNav ul li  {
        padding:0 5px;     
    }
    
    #Header .HorizontalNav ul li.UploadButton a {
        background: #1378BF;
        box-shadow: 0 1px 3px rgba(0,0,0,0.25);
        color: #ffffff;
        border: #1378BF;        
    }
}
@media(max-width:900px) {
    #HeaderButtons {
        padding-left:150px;
    }
}
@media(max-width:700px) {
    .headerlink {
        display:none;
    }
    .clearResponsiveBackground {
        background:none!important;
    }
}
@media(max-width:575px) {
    #HeaderButtons .rbText{
        display:none;
    }
    .ResponsiveHeaderButton {
        width: 50px;
    }
    #HeaderImg {
        max-width:200px;
        height:auto;
        max-height:47px;
    }
}
@media(max-width:515px) {
    #Header {
        padding:5px 5px;
    }
    #HeaderButtons {
        margin:0;
    }
    .ResponsiveHeaderButton {
        margin-left:5px;
    }
    #HeaderNav1 li a,
    #HeaderNav2 li a {
        width: 96vw;
        padding:0 !important;
        text-align: center;
    }
    #HeaderNav1 ul,
    #HeaderNav2 ul {
        text-align: center;
    }
    .HeaderMid #HeaderImg, .HeaderSmall #HeaderImg, .HeaderLarge #HeaderImg  {
        margin-left: 10px;
    }
}
@media(max-width:380px) {
    #HeaderImg {
        max-width: 160px;
        margin-top: 5px;
        height:auto;
    }
}
@media(min-width:1201px) {
    #HeaderNav1, #HeaderNav2 {
        display:block !important;
    }
}

/* Simple Search */
#simplesearchbuttons #Rssearchexpand {
    display:none!important;
}
#SearchBox #ssearchbox:focus {
    outline:none;
}
/* ... */

